--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,4 +34,9 @@
     "python.testing.pytestPath": "${workspaceFolder}/.env/bin/pytest",
     "python.testing.cwd": "${workspaceFolder}/tests",
     "git.enableCommitSigning": true,
+    "cSpell.words": [
+        "filterset",
+        "viewset",
+        "viewsets"
+    ],
 }
