Fixed ai app tests

--- a/gen_flow/apps/ai/tests/assets/dummy_provider/dummy_provider.yaml
+++ b/gen_flow/apps/ai/tests/assets/dummy_provider/dummy_provider.yaml
@@ -7,3 +7,16 @@ description:
   de_DE: Modelle von DummyProvider
 supported_model_types:
   - llm
+credential_form:
+  - name: api_key
+    label:
+      en_US: API Key
+      de_DE: API-Schlüssel
+    type: secret
+    required: true
+  - name: organization
+    label:
+      en_US: Organization
+      de_DE: Organisation
+    type: string
+    required: false
