Added prompt to session creation options

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,9 @@
     "python.testing.cwd": "${workspaceFolder}/tests",
     "git.enableCommitSigning": true,
     "cSpell.words": [
+        "encrypter",
         "filterset",
+        "Uploady",
         "viewset",
         "viewsets"
     ],
