Added docker files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,8 @@
     "cSpell.words": [
         "encrypter",
         "filterset",
+        "letsencrypt",
+        "traefik",
         "Uploady",
         "viewset",
         "viewsets"
