Renamed GEnFlow environment variables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "decryptor",
         "encryptor",
         "filterset",
+        "genflow",
         "letsencrypt",
         "OAEP",
         "traefik",
