Try push docker image #1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -165,7 +165,7 @@ jobs:
           path: "${{ github.workspace }}/unit_testing"
 
   publish_dev_images:
-    if: github.ref == 'refs/heads/develop'
+    # if: github.ref == 'refs/heads/develop'
     needs: [unit_testing]
     runs-on: ubuntu-latest
     permissions:
