--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,9 +35,13 @@
     "python.testing.cwd": "${workspaceFolder}/tests",
     "git.enableCommitSigning": true,
     "cSpell.words": [
-        "encrypter",
+        "ciphertext",
+        "decryptor",
+        "encryptor",
         "filterset",
+        "genflow",
         "letsencrypt",
+        "OAEP",
         "traefik",
         "Uploady",
         "viewset",
