Fixed remark warning

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "genflow",
         "letsencrypt",
         "OAEP",
+        "scriv",
         "traefik",
         "Uploady",
         "viewset",
