Added Google as auth provider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
         "letsencrypt",
         "OAEP",
         "scriv",
+        "SOCIALACCOUNT",
         "traefik",
         "Uploady",
         "viewset",
