--- a/genflow-ui/.env.development
+++ b/genflow-ui/.env.development
@@ -10,5 +10,11 @@ REACT_APP_BACKEND_API_BASE_URL=http://localhost:7000/api
 # Authentication URL
 REACT_APP_BACKEND_AUTH_URL=/auth
 
+# Social Authentication URLs
+REACT_APP_BACKEND_GOOGLE_AUTH_URL=/auth/google
+
 # websockets
 REACT_APP_BACKEND_WS_URL=ws://localhost:7000/ws
+
+# Google clientId
+REACT_APP_GOOGLE_CLIENT_ID=
