--- a/genflow-ui/.env.production
+++ b/genflow-ui/.env.production
@@ -10,5 +10,11 @@ REACT_APP_BACKEND_API_BASE_URL=/api
 # Authentication URL
 REACT_APP_BACKEND_AUTH_URL=/auth
 
+# Social Authentication URLs
+REACT_APP_BACKEND_GOOGLE_AUTH_URL=/auth/google
+
 # websockets
 REACT_APP_BACKEND_WS_URL=/ws
+
+# Google clientId
+REACT_APP_GOOGLE_CLIENT_ID=
