--- a/genflow-ui/package.json
+++ b/genflow-ui/package.json
@@ -21,6 +21,7 @@
         "@mui/icons-material": "^7.0.1",
         "@mui/material": "^7.0.1",
         "@mui/x-charts": "7.28.0",
+        "@react-oauth/google": "^0.12.1",
         "@rpldy/uploady": "^1.9.1",
         "@tanstack/react-query": "^5.71.10",
         "@uiw/react-json-view": "^2.0.0-alpha.30",
