--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
     "git.enableCommitSigning": true,
     "cSpell.words": [
         "ciphertext",
+        "csrftoken",
         "decryptor",
         "encryptor",
         "filterset",
