--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,13 +88,13 @@ services:
       TRAEFIK_PROVIDERS_DOCKER_NETWORK: genflow
       TRAEFIK_PROVIDERS_FILE_DIRECTORY: /etc/traefik/rules
     # Uncomment to get Traefik dashboard
-      TRAEFIK_API_DASHBOARD: "true"
-      TRAEFIK_ENTRYPOINTS_dashboard_ADDRESS: :8090
-    labels:
-      traefik.enable: "true"
-      traefik.http.routers.dashboard.entrypoints: dashboard
-      traefik.http.routers.dashboard.service: api@internal
-      traefik.http.routers.dashboard.rule: Host(`${GF_HOST:-localhost}`)
+    #   TRAEFIK_API_DASHBOARD: "true"
+    #   TRAEFIK_ENTRYPOINTS_dashboard_ADDRESS: :8090
+    # labels:
+    #   traefik.enable: "true"
+    #   traefik.http.routers.dashboard.entrypoints: dashboard
+    #   traefik.http.routers.dashboard.service: api@internal
+    #   traefik.http.routers.dashboard.rule: Host(`${GF_HOST:-localhost}`)
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
