--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,13 +3,8 @@
 # These owners will be the default owners for everything in
 # the repo. Unless a later match takes precedence, they will
 # be requested for review when someone opens a pull request.
-*               @revealAi
+*       @revealAi @ibraym @waelKH
 
 # Component: Server
-*               @revealAi
-
 # Component: UI
-*               @revealAi
-
 # Infrastructure
-*               @revealAi
