Fix media can not be served on production

--- a/genflow/nginx.conf
+++ b/genflow/nginx.conf
@@ -63,6 +63,10 @@ http {
       alias /home/django/statics/;
     }
 
+    location /media/ {
+        alias /home/django/data/media/;
+    }
+
     location /data/ {
       internal;
       alias /home/django/data/;
