--- a/genflow-ui/.env.development
+++ b/genflow-ui/.env.development
@@ -18,3 +18,6 @@ REACT_APP_BACKEND_WS_URL=ws://localhost:7000/ws
 
 # Google clientId
 REACT_APP_GOOGLE_CLIENT_ID=
+
+# telemetry
+REACT_APP_TELEMETRY_DISABLED=true
