--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     types: [ready_for_review, opened, synchronize, reopened]
     paths-ignore:
+      - 'site/**'
       - '**/*.md'
 
 concurrency:
