--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,13 @@ yarn-error.log*
 
 .DS_Store
 
+#Ignore website temp files
+/site/public/
+/site/resources/
+/site/node_modules/
+/site/tech-doc-hugo
+/site/.hugo_build.lock
+
 # Ignore all the installed packages
 node_modules
 
