--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,6 +6,7 @@ on:
       - 'develop'
   pull_request:
     types: [opened, synchronize, reopened]
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -24,15 +25,8 @@ jobs:
 
       - name: Setup Hugo
         run: |
-          wget https://github.com/gohugoio/hugo/releases/download/v0.110.0/hugo_extended_0.110.0_Linux-64bit.tar.gz
-          (mkdir hugo_extended_0.110.0_Linux-64bit && tar -xf hugo_extended_0.110.0_Linux-64bit.tar.gz -C hugo_extended_0.110.0_Linux-64bit)
-
-          wget https://github.com/gohugoio/hugo/releases/download/v0.83.0/hugo_extended_0.83.0_Linux-64bit.tar.gz
-          (mkdir hugo_extended_0.83.0_Linux-64bit && tar -xf hugo_extended_0.83.0_Linux-64bit.tar.gz -C hugo_extended_0.83.0_Linux-64bit)
-
-          mkdir hugo
-          cp hugo_extended_0.110.0_Linux-64bit/hugo hugo/hugo-0.110
-          cp hugo_extended_0.83.0_Linux-64bit/hugo hugo/hugo-0.83
+          wget https://github.com/gohugoio/hugo/releases/download/v0.123.7/hugo_extended_0.123.7_Linux-64bit.tar.gz
+          (mkdir hugo && tar -xf hugo_extended_0.123.7_Linux-64bit.tar.gz -C hugo)
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -47,13 +41,12 @@ jobs:
       - name: Build docs
         run: |
           pip install -r site/requirements.txt
-          python site/process_sdk_docs.py
           PATH="$PWD/hugo:$PATH" python site/build_docs.py
         env:
           HUGO_ENV: production
 
       - name: Deploy
-        if: github.ref == 'refs/heads/develop'
+        if: github.ref == 'refs/heads/Docs'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
